--- a/biblist.bib
+++ b/biblist.bib
@@ -23,9 +23,13 @@ year = {1997}
 @article{shaback_2006,
 author = {Schaback, Robert and  Werner, J.},
 year = {2006},
+month = {07},
+pages = {237–258},
+volume = {25},
 title = {Linearly constrained reconstruction of functions by kernels with applications to machine learning},
 journal = {Advances in Computational Mathematics}
 }
+
 
 
 @book{fasshauer_2007,
@@ -58,7 +62,7 @@ booktitle="New Developments in Approximation Theory",
 year="1999",
 publisher="BirkhÃ¤user Basel",
 address="Basel",
-pages="255--282"
+pages="255–282"
 }
 
 
@@ -66,7 +70,7 @@ pages="255--282"
 author = {De Marchi, Stefano and Schaback, Robert},
 year = {2010},
 month = {02},
-pages = {155--161},
+pages = {155–161},
 title = {Stability of kernel-based interpolation},
 volume = {32},
 journal = {Adv. Comput. Math.},
@@ -78,7 +82,7 @@ journal = {Adv. Comput. Math.},
 author = {Pazouki, Maryam and Schaback, Robert},
 year = {2011},
 month = {09},
-pages = {575--588},
+pages = {575–588},
 title = {Bases for kernel-based spaces},
 volume = {236},
 journal = {J. Computational Applied Mathematics},
@@ -90,7 +94,7 @@ journal = {J. Computational Applied Mathematics},
 author = {Fornberg, Bengt and GB, Wright},
 year = {2004},
 month = {09},
-pages = {853--867},
+pages = {853–867},
 title = {Stable computation of multiquadric interpolants for all values of the shape parameter},
 volume = {48},
 journal = {Computers \& Mathematics with Applications},
@@ -102,7 +106,7 @@ journal = {Computers \& Mathematics with Applications},
 author = {Fornberg, Bengt and Larsson, Elisabeth and Flyer, Natasha},
 year = {2011},
 month = {01},
-pages = {869--892},
+pages = {869–892},
 title = {Stable Computations with Gaussian Radial Basis Functions},
 volume = {33},
 journal = {SIAM J. Scientific Computing},
@@ -114,7 +118,7 @@ journal = {SIAM J. Scientific Computing},
 author = {Rippa, Shmuel},
 year = {1999},
 month = {11},
-pages = {193--210},
+pages = {193–210},
 title = {An algorithm for selecting a good parameter~$c$ in radial basis function interpolation},
 volume = {11},
 journal = {Advances in Computational Mathematics},
@@ -137,7 +141,7 @@ journal = {Dolomite Res. Notes Approx.}
 title = {Kernel-based adaptive approximation of functions with discontinuities},
 journal = {Applied Mathematics and Computation},
 volume = {307},
-pages = {113--123},
+pages = {113–123},
 year = {2017},
 %doi = {/10.1016/j.amc.2017.02.043},
 author = {Licia Lenarduzzi and Robert Schaback}
@@ -150,7 +154,7 @@ title = {The Laurent expansion for a nearly singular matrix},
 journal = {Linear Algebra and its Applications},
 volume = {4},
 number = {4},
-pages = {329-340},
+pages = {329–340},
 year = {1971},
 %issn = {0024-3795},
 %doi = {https://doi.org/10.1016/0024-3795(71)90004-8},
@@ -163,7 +167,7 @@ author = {C.E. Langenhop}
 title = {Laurent expansion of the inverse of perturbed, singular matrices},
 journal = {Journal of Computational Physics},
 volume = {299},
-pages = {307-319},
+pages = {307–319},
 year = {2015},
 %issn = {0021-9991},
 %doi = {https://doi.org/10.1016/j.jcp.2015.07.006},
@@ -184,7 +188,7 @@ title = {A note on the Gibbs phenomenon with multiquadric radial basis functions
 journal = {Applied Numerical Mathematics},
 volume = {57},
 number = {2},
-pages = {213-229},
+pages = {213–229},
 year = {2007},
 %issn = {0168-9274},
 %doi = {https://doi.org/10.1016/j.apnum.2006.02.006},
@@ -228,7 +232,7 @@ edition = {1st}
 author = {Schaback, Robert},
 year = {1997},
 month = {03},
-%pages = {},
+pages = {},
 title = {Error Estimates and Condition Numbers for Radial Basis Function Interpolation},
 volume = {3},
 journal = {Advances in Computational Mathematics},
@@ -246,8 +250,7 @@ booktitle="Experimental Algorithms",
 year="2010",
 publisher="Springer Berlin Heidelberg",
 address="Berlin, Heidelberg",
-pages="501--512",
-%abstract="This paper shows that using some very simple practical assumptions, one can design an algorithm that finds the nearest neighbor of a given query point in {\$}{\backslash}mathcal{\{}O{\}}({\backslash}log n){\$}time in theory and faster than the state of the art in practice. The algorithm and proof are both simple and the experimental results clearly show that we can beat the state of the art on most distributions in two dimensions.",
+pages="501–512",
 %isbn="978-3-642-13193-6"
 }
 
@@ -264,7 +267,7 @@ pages="501--512",
     title = {Fast Evaluation of Radial Basis Functions: Methods Based on Partition of Unity},
     booktitle = {Approximation Theory X: Wavelets, Splines, and Applications},
     year = {2002},
-    pages = {473--483},
+    pages = {473–483},
     publisher = {Vanderbilt University Press}
 }
 
@@ -274,7 +277,7 @@ pages="501--512",
 author = {Christmann, Andreas and Steinwart, Ingo},
 year = {2008},
 month = {01},
-%pages = {},
+pages = {},
 title = {Support Vector Machines},
 %isbn = {978-0-387-77241-7},
 journal = {Support Vector Machines: , Information Science and Statistics. Springer Science+Business Media, LLC, 2008},
@@ -286,7 +289,7 @@ journal = {Support Vector Machines: , Information Science and Statistics. Spring
 author = {Ha Quang, Minh and Niyogi, Partha and Yao, Yuan},
 year = {1970},
 month = {01},
-pages = {154--168},
+pages = {154–168},
 title = {Mercer’s Theorem, Feature Maps, and Smoothing},
 %isbn = {978-3-540-35294-5},
 %doi = {10.1007/11776420_14}
@@ -297,7 +300,7 @@ title = {Mercer’s Theorem, Feature Maps, and Smoothing},
 @article{romani-rossini-schenone,
 author = {Romani, Lucia and Rossini, Milvia and Schenone, Daniela},
 year = {2019},
-%pages = {},
+pages = {},
 title = {Edge detection methods based on RBF interpolation},
 volume = {349},
 journal = {Journal of Computational and Applied Mathematics},
@@ -318,7 +321,7 @@ journal = {Journal of Computational and Applied Mathematics},
     VOLUME = {42},
       YEAR = {2020},
     NUMBER = {2},
-     PAGES = {B472--B491},
+     PAGES = {B472–B491},
       ISSN = {1064-8275},
    MRCLASS = {41A05 (41A25 41A30 65D05)},
   MRNUMBER = {4080390},
@@ -346,7 +349,7 @@ MRREVIEWER = {Alessandra De Rossi},
 author = {De Marchi, Stefano and Erb, W. and Marchetti, Francesco and Perracchione, Emma and Rossini, Milvia},
 year = {2020},
 month = {01},
-pages = {B472-B491},
+pages = {B472–B491},
 title = {Shape-Driven Interpolation With Discontinuous Kernels: Error Analysis, Edge Extraction, and Applications in Magnetic Particle Imaging},
 volume = {42},
 journal = {SIAM Journal on Scientific Computing},
@@ -362,5 +365,5 @@ journal = {SIAM Journal on Scientific Computing},
   journal={Dolomites Research Notes on Approximation},
   year={2018},
   volume={11},
-  pages={3-14}
+  pages={3–14}
 }
