--- a/thesis.tex
+++ b/thesis.tex
@@ -21,7 +21,7 @@
 \def\QED{\hbox{\symbols\resizethefont \,❖}}
 \famvardef\bm{\EBGaramond\setff{-liga; -kern}\semibold\bi}
 \famvardef\bmu{\EBGaramond\setff{-liga; -kern}\semibold\bf}
-\famvardef\tt{\TypewriterMT\setff{-liga; -tlig; embolden=1.1}\typoscale[870/]\rm}
+\famvardef\tt{\TypewriterMT\setff{-liga; -tlig;}\typoscale[870/]\rm}
 
 
 \margins/1 a4 (103,95,145,130)pt
