--- a/presentazione.tex
+++ b/presentazione.tex
@@ -1,18 +1,49 @@
-
-\slides
-
+\newtoks\tmptoks
+\def\Cal#1{{\cal #1}}
+\def\Bm#1{\hbox{$\boldmath #1$}}
+\leftskip 1cm
+\rightskip 1cm
 
 \fontfam[lm]\sans
 
-\def\_titfont{\typosize[25/38]\bf \Blue}
-\def\_subtitfont{\typosize[20/35]}
+
+\slides
+\typosize[18/33]
+
+\gdef\_titfont{\typosize[25/38]\bf \Blue}
+\gdef\_subtitfont{\typosize[20/35]}
+
+
 
 \tit  ON THE PROBLEM OF RECOVERING\nl DISCONTINUOUS FUNCTIONS\nl FROM SCATTERED DATA
 \subtit  Matteo Caoduro\nl {\it Relatore:\,} Prof.ssa Milvia Francesca Rossini\nl 18 marzo 2021
 
 \pg;
 
-\sec Interpolazione basata su kernel
+\null\vskip 1.5cm
+* Interpolazione basata su kernel
+\medskip
+* Classificazione dei dati
+\medskip
+* Individuazione delle discontinuità e ricostruzione
+
+\pg;
+
+* $X =\{x_1,x_2,\dots,x_N\}$ insieme di locazioni
+* $F = \{f_1,f_2,\dots,f_N\}$ insieme di valori campionati da una funzione~$f$
+* $\Cal S$ spazio lineare di funzioni~$s:Ω\to ℝ$
+\smallskip
+* {\bf Problema:} Trovare $s\in\Cal S$ tale che $s(x_j) = f_j$ per ogni~$j$
+* $s = \sum_{j=1}^N \alpha_j B_j$, se $\Cal B = \{B_1,B_2,\dots B_N\}$ è una base di $\Cal S$
+
+ 
+* Sistema lineare $\Bm A \Bm\alpha = \Bm f$,
+$$ \eqalign{
+&\Bm A_{i, j} = B_j(x_i) \cr
+\Bm \alpha &= (\alpha_1,\alpha_2,\dots,\alpha_N)^T \cr
+\Bm f &= (f_1,f_2,\dots, f_N)^T
+} $$
+
 
 
 \pg.
