--- a/biblist.bib
+++ b/biblist.bib
@@ -16,14 +16,15 @@ collection={Cambridge Monographs on Applied and Computational Mathematics}
 @book{shaback_1997,
 title = {Reconstruction of multivariate functions from scattered data},
 author = {Schaback, Robert},
-year = {1997}
+year = {1997},
+publisher={Technical report}
 }
 
 
 @article{shaback_2006,
 author = {Schaback, Robert and  Werner, J.},
 year = {2006},
-month = {07},
+%month = {07},
 pages = {237–258},
 volume = {25},
 title = {Linearly constrained reconstruction of functions by kernels with applications to machine learning},
@@ -61,7 +62,7 @@ title="Native Hilbert Spaces for Radial Basis Functions I",
 booktitle="New Developments in Approximation Theory",
 year="1999",
 publisher="BirkhÃ¤user Basel",
-address="Basel",
+%address="Basel",
 pages="255–282"
 }
 
@@ -69,11 +70,11 @@ pages="255–282"
 @article{demarchi-shaback_2010,
 author = {De Marchi, Stefano and Schaback, Robert},
 year = {2010},
-month = {02},
+%month = {02},
 pages = {155–161},
 title = {Stability of kernel-based interpolation},
 volume = {32},
-journal = {Adv. Comput. Math.},
+journal = {Advances in Computational Mathematics},
 %doi = {10.1007/s10444-008-9093-4}
 }
 
@@ -81,7 +82,7 @@ journal = {Adv. Comput. Math.},
 @article{pazouki-schaback_2011,
 author = {Pazouki, Maryam and Schaback, Robert},
 year = {2011},
-month = {09},
+%month = {09},
 pages = {575–588},
 title = {Bases for kernel-based spaces},
 volume = {236},
@@ -93,7 +94,7 @@ journal = {J. Computational Applied Mathematics},
 @article{fornberg-wright_2004,
 author = {Fornberg, Bengt and GB, Wright},
 year = {2004},
-month = {09},
+%month = {09},
 pages = {853–867},
 title = {Stable computation of multiquadric interpolants for all values of the shape parameter},
 volume = {48},
@@ -105,7 +106,7 @@ journal = {Computers \& Mathematics with Applications},
 @article{fornberg-larsson-flyer_2011,
 author = {Fornberg, Bengt and Larsson, Elisabeth and Flyer, Natasha},
 year = {2011},
-month = {01},
+%month = {01},
 pages = {869–892},
 title = {Stable Computations with Gaussian Radial Basis Functions},
 volume = {33},
@@ -117,7 +118,7 @@ journal = {SIAM J. Scientific Computing},
 @article{rippa_1999,
 author = {Rippa, Shmuel},
 year = {1999},
-month = {11},
+%month = {11},
 pages = {193–210},
 title = {An algorithm for selecting a good parameter~$c$ in radial basis function interpolation},
 volume = {11},
@@ -129,7 +130,7 @@ journal = {Advances in Computational Mathematics},
 @article{fasshauer_2011,
 author = {Fasshauer, Gregory F.},
 year = {2011},
-month = {01},
+%month = {01},
 title = {Positive Definite Kernels: Past, Present and Future},
 volume = {4},
 journal = {Dolomite Res. Notes Approx.}
@@ -175,11 +176,12 @@ author = {Pedro Gonzalez-Rodriguez and Miguel Moscoso and Manuel Kindelan}
 }
 
 
-@article{fornberg-flyer_2012,
+@inproceedings{fornberg-flyer_2012,
 author = {Fornberg, Bengt and Flyer, Natasha},
-year = {2012},
-month = {03},
-title = {The Gibbs Phenomenon for Radial Basis Functions}
+booktitle={Gibbs Phenomenon in Various Representations and Applications, Sampling Publishing},
+year = {2006},
+title = {The Gibbs Phenomenon for Radial Basis Functions},
+pages = {123–135}
 }
 
 
@@ -209,7 +211,7 @@ number = {9},
 %issn = {0001-0782},
 %doi = {10.1145/361002.361007},
 journal = {Commun. ACM},
-month = sep,
+%month = sep,
 pages = {509–517},
 numpages = {9}
 }
@@ -231,8 +233,8 @@ edition = {1st}
 @article{schaback_1997b,
 author = {Schaback, Robert},
 year = {1997},
-month = {03},
-pages = {},
+%month = {03},
+pages = {251–264},
 title = {Error Estimates and Condition Numbers for Radial Basis Function Interpolation},
 volume = {3},
 journal = {Advances in Computational Mathematics},
@@ -276,11 +278,12 @@ pages="501–512",
 @book{christmann-steinwart_2008,
 author = {Christmann, Andreas and Steinwart, Ingo},
 year = {2008},
-month = {01},
+%month = {01},
 pages = {},
 title = {Support Vector Machines},
 %isbn = {978-0-387-77241-7},
-journal = {Support Vector Machines: , Information Science and Statistics. Springer Science+Business Media, LLC, 2008},
+publisher = {Information Science and Statistics, Springer}
+%journal = {Support Vector Machines: , Information Science and Statistics. Springer Science+Business Media, LLC, 2008},
 %doi = {10.1007/978-0-387-77242-4}
 }
 
@@ -288,7 +291,7 @@ journal = {Support Vector Machines: , Information Science and Statistics. Spring
 @inproceedings{ha_quang-niyogi-yao_1970,
 author = {Ha Quang, Minh and Niyogi, Partha and Yao, Yuan},
 year = {1970},
-month = {01},
+%month = {01},
 pages = {154–168},
 title = {Mercer’s Theorem, Feature Maps, and Smoothing},
 %isbn = {978-3-540-35294-5},
@@ -300,7 +303,7 @@ title = {Mercer’s Theorem, Feature Maps, and Smoothing},
 @article{romani-rossini-schenone,
 author = {Romani, Lucia and Rossini, Milvia and Schenone, Daniela},
 year = {2019},
-pages = {},
+pages = {532–547},
 title = {Edge detection methods based on RBF interpolation},
 volume = {349},
 journal = {Journal of Computational and Applied Mathematics},
@@ -348,7 +351,7 @@ MRREVIEWER = {Alessandra De Rossi},
 @article{de_marchi-erb-marchetti-perracchione-rossini_2020,
 author = {De Marchi, Stefano and Erb, W. and Marchetti, Francesco and Perracchione, Emma and Rossini, Milvia},
 year = {2020},
-month = {01},
+%month = {01},
 pages = {B472–B491},
 title = {Shape-Driven Interpolation With Discontinuous Kernels: Error Analysis, Edge Extraction, and Applications in Magnetic Particle Imaging},
 volume = {42},
